syntax="proto3";

import "entity.proto";

package org.maxtorm.ledger.proto;

message CreateAccountRequest {
  Account account = 1;
}

message CreateAccountResponse {
  Account account = 1;

  int64 error_code = 100;
  string error_message = 101;
}


message GetAccountTreeResponse {
  repeated AccountTree account_tree = 1;
  int64 error_code = 100;
  string error_message = 101;
}

message TransferRequest {
  Transaction transaction = 1;
}

message TransferResponse {
  Account source_account = 1;
  Account destination_account = 2;
  Transaction transaction = 3;
  int64 error_code = 100;
  string error_message = 101;
}
